fix: update tasks container so that there isn't a content jump between loading and loaded

--- a/src/_components/TaskList/TaskList.module.scss
+++ b/src/_components/TaskList/TaskList.module.scss
@@ -1,9 +1,5 @@
 .TaskList {
     width: 100%;
-    background-color: var(--orange);
-    padding: 15px var(--list-container-side-padding);
-    padding-top: 80px;
-    margin-top: -75px;
     
     flex-direction: column;
 
