--- a/src/_containers/Tasks/Tasks.module.scss
+++ b/src/_containers/Tasks/Tasks.module.scss
@@ -1,3 +1,11 @@
 .Tasks {
     
 }
+
+.TaskContentContainer {
+    width: 100%;
+    background-color: var(--orange);
+    padding: 15px var(--list-container-side-padding);
+    padding-top: 80px;
+    margin-top: -75px;
+}
